# r-html

./: .gitignore  Cargo.toml  README.md
codegen/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
r-html-codegen/: Cargo.toml
r-html-codegen/src/: lib.rs
src/: lib.rs  parser.rs
templates/: template_example.rs.html  template_idea.rs.html
