[package]
name = "r-html-codegen"
version = "0.2.0"
authors = ["MarRue <20143778+gpluscb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

nom = "6.1.2"
syn = { version = "1.0.73", features = ["full"] }
quote = "1.0.9"
